Fix: align connect wallet button when signed out mobile

--- a/src/modules/users/components/ConnectWalletWizard/ConnectWalletPopover/WalletPopoverTemplate.css
+++ b/src/modules/users/components/ConnectWalletWizard/ConnectWalletPopover/WalletPopoverTemplate.css
@@ -11,4 +11,8 @@
     padding: 30px 25px;
     width: calc(100vw - 28px);
   }
+
+  button[class*="DecisionOption"] {
+    height: auto;
+  }
 }
